<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"></TextView>

        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/black"></TextView>

        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"></EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/black"></TextView>

        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"></TextView>

        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"></EditText>
    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:text="@string/submit"
        android:background="@drawable/btn_style"
        android:textColor="@color/white"
        android:textSize="14sp"></Button>
</LinearLayout>